kubernetes/cilium-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
  namespace: cilium
  annotations:
    # This triggers the dedicated Envoy deployment
    # io.cilium.gateway/lb-mode: "dedicated"
spec:
  gatewayClassName: cilium
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: default-http
      port: 80
      protocol: HTTP
