kubernetes/traefik-dapr-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dapr-localhost
  namespace: traefik
spec:
  type: ExternalName
  externalName: localhost
  ports:
  - port: 3500
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dapr-ingress-route
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/v1.0/invoke`)
    kind: Rule
    services:
    - name: traefik-dapr-localhost
      port: 3500
